fix board spacing and distracting button outlines

--- a/midterm/colorgame.css
+++ b/midterm/colorgame.css
@@ -26,6 +26,7 @@ button {
     transition: all 0.3s;
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
+    outline: none;
 }
 
 button:hover {
@@ -68,7 +69,7 @@ button:hover {
 }
 
 #board {
-    margin: 0 auto;
+    margin: 10px auto;
     max-width: 600px;
 }
 
